; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/xmon/extr_xmon.c_bsesc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/xmon/extr_xmon.c_bsesc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @bsesc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bsesc() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @inchar()
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* %1, align 4
  switch i32 %3, label %8 [
    i32 110, label %4
    i32 114, label %5
    i32 98, label %6
    i32 116, label %7
  ]

4:                                                ; preds = %0
  store i32 10, i32* %1, align 4
  br label %8

5:                                                ; preds = %0
  store i32 13, i32* %1, align 4
  br label %8

6:                                                ; preds = %0
  store i32 8, i32* %1, align 4
  br label %8

7:                                                ; preds = %0
  store i32 9, i32* %1, align 4
  br label %8

8:                                                ; preds = %0, %7, %6, %5, %4
  %9 = load i32, i32* %1, align 4
  ret i32 %9
}

declare dso_local i32 @inchar(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
